@@ -180,12 +180,18 @@ if test x"$with_fftw3" != "xno"; then
 fi
 
 # ImageMagick ... detect attribute iteration too
+# Optionally look for GraphicsMagick instead 
 AC_ARG_WITH([magick], AS_HELP_STRING([--without-magick], [build without libMagic (default: test)]))
+AC_ARG_WITH([magickpackage], AS_HELP_STRING([--with-magickpackage], [magickpackage to use (default: ImageMagick)]))
+
+if test x"$with_magickpackage" == "xno"; then
+  with_magickpackage=ImageMagick
+fi
 
 if test x"$with_magick" != "xno"; then
-  PKG_CHECK_MODULES(MAGICK, ImageMagick, 
+  PKG_CHECK_MODULES(MAGICK, $with_magickpackage, 
     [AC_DEFINE(HAVE_MAGICK,1,[define if you have libMagick installed.])
-    PACKAGES_USED="$PACKAGES_USED ImageMagick"],
+    PACKAGES_USED="$PACKAGES_USED $with_magickpackage"],
     [AC_MSG_WARN([libMagick not found; disabling Magick support])])
 fi
 
